--- a/qa-testcase-boxes/testcase-debranding-validation/r9.yaml
+++ b/qa-testcase-boxes/testcase-debranding-validation/r9.yaml
@@ -11,28 +11,19 @@
     source:
 ---
 "all":
-  "abrt":
-    modular: false
-    check: PackageRequires
-    nvr_pkg: abrt-
-    file: na
-    content: libreport-plugin-rhtsupport
-    value: true
-    pkg_arch:
-    source:
   "anaconda":
     modular: false
     check: FileContents
     nvr_pkg: anaconda-core-34.25.0.29-1.el9_0.rocky.0.1
-    file: /etc/anaconda/product.d/rocky.conf
-    content: rocky_help_placeholder.xml
+    file: /usr/lib64/python3.9/site-packages/pyanaconda/core/constants.py
+    content: Rocky Linux
     value: true
     pkg_arch:
     source:
   "anaconda-user-help":
     modular: false
     check: FileContents
-    nvr_pkg: anaconda-user-help-
+    nvr_pkg: anaconda-user-help-9.0.0-1.el9.rocky.0.1
     file: /usr/share/anaconda/help/rocky/en-US/anaconda-help.xml
     content: Welcome to Rocky Linux
     value: true
@@ -42,16 +33,16 @@
     modular: false
     check: FileContents
     nvr_pkg: chrony-4.1-3.el9
-    file: chrony.spec
-    content: The NTP people really
-    value: true
-    pkg_arch: src
+    file: /etc/chrony.conf
+    content: "#leapsectz"
+    value: false
+    pkg_arch:
     source:
   "cloud-init":   # temporary till 21.3
     modular: false
     check: FileContents
     nvr_pkg: cloud-init-21.1-19.el9
-    file: /usr/lib/python3.6/site-packages/cloudinit/distros/__init__.py
+    file: /usr/lib/python3.9/site-packages/cloudinit/distros/__init__.py
     content: rocky
     value: true
     pkg_arch: noarch
@@ -68,8 +59,8 @@
   "dhcp":
     modular: false
     check: FileContents
-    nvr_pkg: dhcp-
-    file: dhcp-errwarn-message.patch
+    nvr_pkg: dhcp-4.4.2-15.b1.el9
+    file: 0001-change-bug-url.patch
     content: https://bugs.rockylinux.org/
     value: true
     pkg_arch: src
@@ -77,8 +68,8 @@
   "dnf":
     modular: false
     check: FileContents
-    nvr_pkg: python3-
-    file: /usr/lib/python3.6/site-packages/dnf/const.py
+    nvr_pkg: python3-dnf-4.10.0-5.el9_0
+    file: /usr/lib/python3.9/site-packages/dnf/const.py
     content: "BUGTRACKER='https://bugs.rockylinux.org/'"
     value: true
     pkg_arch: noarch
@@ -86,7 +77,7 @@
   "firefox":
     modular: false
     check: FileContents
-    nvr_pkg: firefox-91.7.0-3.el9_0
+    nvr_pkg: firefox-91.8.0-1.el9_0
     file: /usr/lib64/firefox/defaults/preferences/all-redhat.js
     content: https://rockylinux.org
     value: true
@@ -95,7 +86,7 @@
   "fwupd":
     modular: false
     check: BinaryStrings
-    nvr_pkg: fwupd-1.5.9-3.el9
+    nvr_pkg: fwupd-1.7.4-2.el9_0
     file: /usr/libexec/fwupd/efi/fwupdx64.efi.signed
     content: Rocky Linux Secure Boot Root CA
     value: true
@@ -110,45 +101,19 @@
     value: true
     pkg_arch:
     source:
-  "gcc-toolset-9-gcc":
-    modular: false
-    check: FileContents
-    nvr_pkg: gcc-toolset-9-gcc-
-    file: gcc.spec
-    content: http://bugzilla.redhat.com/bugzilla
-    value: false
-    pkg_arch: src
-    source:
-  "gcc-toolset-10-gcc":
-    modular: false
-    check: FileContents
-    nvr_pkg: gcc-toolset-10-gcc-
-    file: gcc.spec
-    content: http://bugzilla.redhat.com/bugzilla
-    value: false
-    pkg_arch: src
-    source:
-  "gcc-toolset-11-gcc":
-    modular: false
-    check: FileContents
-    nvr_pkg: gcc-toolset-11-gcc-
-    file: /opt/rh/gcc-toolset-11/root/usr/share/man/man1/gcc.1.gz
-    content: https://bugs.rockylinux.org/
-    value: true
-    source:
   "gnome-settings-daemon":
     modular: false
-    check: FileExists
+    check: FileContents
     nvr_pkg: gnome-settings-daemon-40.0.1-6.el9
-    file: /etc/xdg/autostart/org.gnome.SettingsDaemon.Subscription.desktop
-    content: na
+    file: gnome-settings-daemon.spec
+    content: "%if %{with subman}"
     value: false
-    pkg_arch:
+    pkg_arch: src
     source:
   "grub2":
     modular: false
     check: BinaryStrings
-    nvr_pkg: grub2-efi-x64-
+    nvr_pkg: grub2-efi-x64-2.06-27.el9_0
     file: /boot/efi/EFI/rocky/grubx64.efi
     content: Rocky Linux Secure Boot Root CA
     value: true
@@ -157,17 +122,17 @@
   "initial-setup":
     modular: false
     check: FileContents
-    nvr_pkg: initial-setup-0.3.90.2-2.el9
-    file: /usr/lib/python3.6/site-packages/initial_setup/product.py
-    content: /usr/share/rocky-release
+    nvr_pkg: initial-setup-gui-0.3.90.2-2.el9
+    file: /usr/lib/python3.9/site-packages/initial_setup/gui/spokes/eula.py
+    content: http://bugs.rockylinux.org
     value: true
     pkg_arch:
     source:
   "kernel":
     modular: false
     check: BinaryStrings
-    nvr_pkg: kernel-core-
-    file: /lib/modules/4.18.0-372.9.1.el8.x86_64/vmlinuz
+    nvr_pkg: kernel-core-5.14.0-70.13.1.el9
+    file: /lib/modules/5.14.0-70.13.1.el9.x86_64/vmlinuz
     content: Rocky Linux Secure Boot Root CA
     value: true
     pkg_arch:
@@ -175,8 +140,8 @@
   "kernel-rt":
     modular: false
     check: BinaryStrings
-    nvr_pkg: kernel-rt-core-
-    file: /lib/modules/4.18.0-372.9.1.rt7.166.el8.x86_64/vmlinuz
+    nvr_pkg: kernel-rt-core-5.14.0-70.13.1.rt21.83.el9
+    file: /lib/modules/5.14.0-70.13.1.rt21.83.el9.x86_64/vmlinuz
     content: Rocky Linux Secure Boot Root CA
     value: true
     pkg_arch:
@@ -211,7 +176,7 @@
   "nginx":
     modular: true
     check: FileContents
-    package: nginx-
+    package: nginx-1.20.1-10.el9
     file: /usr/share/nginx/html/404.html
     content: <a href="https://www.rockylinux.org/">
     value: true
@@ -220,7 +185,7 @@
   "opa-ff":
     modular: false
     check: FileContents
-    nvr_pkg: opa-ff-
+    nvr_pkg: opa-ff-10.11.0.2-1.el9.rocky
     file: 5000-add-rocky.patch
     content: Rocky Linux
     value: true
@@ -229,7 +194,7 @@
   "opa-fm":
     modular: false
     check: FileContents
-    nvr_pkg: opa-fm-10.11.0.2-1.el9
+    nvr_pkg: opa-fm-10.11.0.2-1.el9.rocky
     file: 5000-add-rocky.patch
     content: Rocky Linux
     value: true
@@ -265,8 +230,8 @@
   "python-pip":
     modular: false
     check: FileContents
-    nvr_pkg: platform-python-pip-21.2.3-6.el9
-    file: /usr/lib/python3.6/site-packages/pip/_vendor/distro.py
+    nvr_pkg: python3-pip-21.2.3-6.el9
+    file: /usr/lib/python3.9/site-packages/pip/_vendor/distro.py
     content: Rocky Linux
     value: true
     pkg_arch: noarch
@@ -274,7 +239,7 @@
   "redhat-rpm-config":
     modular: false
     check: FileContents
-    nvr_pkg: redhat-rpm-config-
+    nvr_pkg: redhat-rpm-config-194-1.el9
     file: /usr/lib/rpm/redhat/dist.sh
     content: Rocky
     value: true
@@ -292,7 +257,7 @@
   "shim":
     modular: false
     check: FileContents
-    nvr_pkg: shim-
+    nvr_pkg: shim-15.4-2.el9.rocky.1
     file: shim.spec
     content: rocky-root-ca.der
     value: true
@@ -301,7 +266,7 @@
   "shim-unsigned-x64":
     modular: false
     check: FileContents
-    nvr_pkg: shim-unsigned-x64-15.5-1.el9.rocky.1
+    nvr_pkg: shim-unsigned-x64-15.5-1.el9.rocky.2
     file: shim-unsigned-x64.spec
     content: rocky-root-ca.der
     value: true
@@ -310,7 +275,7 @@
   "shim-unsigned-aarch64":
     modular: false
     check: FileContents
-    nvr_pkg: shim-unsigned-
+    nvr_pkg: shim-unsigned-aarch64-15-6.el9.rocky.2
     file: shim-unsigned-aarch64.spec
     content: rocky-root-ca.der
     value: true
@@ -319,8 +284,8 @@
   "sos":
     modular: false
     check: FileContents
-    nvr_pkg: sos-
-    file: /usr/lib/python3.6/site-packages/sos/policies/distros/rocky.py
+    nvr_pkg: sos-4.2-15.el9
+    file: /usr/lib/python3.9/site-packages/sos/policies/distros/rocky.py
     content: Rocky Enterprise Software Foundation
     value: true
     pkg_arch: noarch
@@ -328,7 +293,7 @@
   "subscription-manager":
     modular: false
     check: FileContents
-    nvr_pkg: subscription-manager-
+    nvr_pkg: subscription-manager-1.29.26-3.el9_0
     file: /etc/dnf/plugins/subscription-manager.conf
     content: "enabled=0"
     value: true
@@ -337,7 +302,7 @@
   "systemd":
     modular: false
     check: FileContents
-    nvr_pkg: systemd-
+    nvr_pkg: systemd-250-6.el9_0
     file: systemd.spec
     content: 0028-journal-change-support-URL-shown-in-the-catalog-entr.patch
     value: false
@@ -346,7 +311,7 @@
   "thunderbird":
     modular: true
     check: FileContents
-    nvr_pkg: thunderbird-91.7.0-2.el9_0
+    nvr_pkg: thunderbird-91.8.0-1.el9_0
     file: /usr/lib64/thunderbird/defaults/pref/all-redhat.js
     content: Rocky
     value: true
@@ -355,8 +320,8 @@
   "WALinuxAgent":
     modular: false
     check: FileContents
-    nvr_pkg: WALinuxAgent-
-    file: /usr/lib/python3.6/site-packages/azurelinuxagent/common/osutil/factory.py
+    nvr_pkg: WALinuxAgent-2.3.0.2-3.el9.rocky.0
+    file: /usr/lib/python3.9/site-packages/azurelinuxagent/common/osutil/factory.py
     content: rocky
     value: true
     pkg_arch: noarch
