--- a/qa-testcase-boxes/testcase-mediacheck/Vagrantfile
+++ b/qa-testcase-boxes/testcase-mediacheck/Vagrantfile
@@ -38,20 +38,20 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "shell" do |script|
     script.name   = "Rocky #{cfg['version']} #{cfg['arch']} boot ISO"
-    script.inline = "/vagrant/scripts/test_wrapper.sh $1 $2 $3"
-    script.args   = ["boot", "#{ cfg['arch'] }", "#{ cfg['version'] }"]
+    script.inline = "/vagrant/scripts/test_wrapper.sh $1 $2 $3 $4"
+    script.args   = ["boot", "#{ cfg['arch'] }", "#{ cfg['version'] }", "#{ cfg['download_base'] }"]
   end
 
   config.vm.provision "shell" do |script|
     script.name   = "Rocky #{cfg['version']} #{cfg['arch']} minimal ISO"
-    script.inline = "/vagrant/scripts/test_wrapper.sh $1 $2 $3"
-    script.args   = ["minimal", "#{ cfg['arch'] }", "#{ cfg['version'] }"]
+    script.inline = "/vagrant/scripts/test_wrapper.sh $1 $2 $3 $4"
+    script.args   = ["minimal", "#{ cfg['arch'] }", "#{ cfg['version'] }", "#{ cfg['download_base'] }"]
   end
 
   config.vm.provision "shell" do |script|
     script.name   = "Rocky #{cfg['version']} #{cfg['arch']} dvd1 ISO"
-    script.inline = "/vagrant/scripts/test_wrapper.sh $1 $2 $3"
-    script.args   = ["dvd1", "#{ cfg['arch'] }", "#{ cfg['version'] }"]
+    script.inline = "/vagrant/scripts/test_wrapper.sh $1 $2 $3 $4"
+    script.args   = ["dvd1", "#{ cfg['arch'] }", "#{ cfg['version'] }", "#{ cfg['download_base'] }"]
   end
 
   config.vm.provision "shell", name: "End Timestamp", inline: <<-SHELL
