--- a/qa-testcase-boxes/testcase-debranding-validation/r9.yaml
+++ b/qa-testcase-boxes/testcase-debranding-validation/r9.yaml
@@ -14,7 +14,7 @@
   "anaconda":
     modular: false
     check: FileContents
-    nvr_pkg: anaconda-core-34.25.0.29-1.el9_0.rocky.0.1
+    nvr_pkg: anaconda-core-34.25.1.14-1.el9.rocky.0.3
     file: /usr/lib64/python3.9/site-packages/pyanaconda/core/constants.py
     content: Rocky Linux
     value: true
@@ -23,8 +23,8 @@
   "anaconda-user-help":
     modular: false
     check: FileContents
-    nvr_pkg: anaconda-user-help-9.0.0-1.el9.rocky.0.1
     file: /usr/share/anaconda/help/rocky/en-US/anaconda-help.xml
+    nvr_pkg: anaconda-user-help-9.0.0-1.el9.rocky.0.2
     content: Welcome to Rocky Linux
     value: true
     pkg_arch: noarch
@@ -41,7 +41,7 @@
   "cloud-init":   # temporary till 21.3
     modular: false
     check: FileContents
-    nvr_pkg: cloud-init-21.1-19.el9
+    nvr_pkg: cloud-init-22.1-5.el9
     file: /usr/lib/python3.9/site-packages/cloudinit/distros/__init__.py
     content: rocky
     value: true
@@ -50,7 +50,7 @@
   "crash":
     modular: false
     check: FileContents
-    nvr_pkg: crash-8.0.0-6.el9
+    nvr_pkg: crash-8.0.1-2.el9
     file: crash.spec
     content: Rocky Linux
     value: true
@@ -59,7 +59,7 @@
   "dhcp":
     modular: false
     check: FileContents
-    nvr_pkg: dhcp-4.4.2-15.b1.el9
+    nvr_pkg: dhcp-4.4.2-17.b1.el9
     file: 0001-change-bug-url.patch
     content: https://bugs.rockylinux.org/
     value: true
@@ -68,7 +68,7 @@
   "dnf":
     modular: false
     check: FileContents
-    nvr_pkg: python3-dnf-4.10.0-5.el9_0
+    nvr_pkg: python3-dnf-4.12.0-4.el9
     file: /usr/lib/python3.9/site-packages/dnf/const.py
     content: "BUGTRACKER='https://bugs.rockylinux.org/'"
     value: true
@@ -77,7 +77,7 @@
   "firefox":
     modular: false
     check: FileContents
-    nvr_pkg: firefox-91.8.0-1.el9_0
+    nvr_pkg: firefox-102.4.0-1.el9_0.0.1
     file: /usr/lib64/firefox/defaults/preferences/all-redhat.js
     content: https://rockylinux.org
     value: true
@@ -86,7 +86,7 @@
   "fwupd":
     modular: false
     check: BinaryStrings
-    nvr_pkg: fwupd-1.7.4-2.el9_0
+    nvr_pkg: fwupd-1.7.9-1.el9
     file: /usr/libexec/fwupd/efi/fwupdx64.efi.signed
     content: Rocky Linux Secure Boot Root CA
     value: true
@@ -95,7 +95,7 @@
   "gcc":
     modular: false
     check: FileContents
-    nvr_pkg: gcc-11.2.1-9.4.el9
+    nvr_pkg: gcc-11.3.1-2.1.el9
     file: /usr/share/man/man1/gcc.1.gz
     content: https://bugs.rockylinux.org/
     value: true
@@ -104,7 +104,7 @@
   "gnome-settings-daemon":
     modular: false
     check: FileContents
-    nvr_pkg: gnome-settings-daemon-40.0.1-6.el9
+    nvr_pkg: gnome-settings-daemon-40.0.1-8.el9
     file: gnome-settings-daemon.spec
     content: "%if %{undefined rocky}"
     value: true
@@ -113,7 +113,7 @@
   "grub2":
     modular: false
     check: BinaryStrings
-    nvr_pkg: grub2-efi-x64-2.06-27.el9_0
+    nvr_pkg: grub2-efi-x64-2.06-46.el9.rocky.0.1
     file: /boot/efi/EFI/rocky/grubx64.efi
     content: Rocky Linux Secure Boot Root CA
     value: true
@@ -131,8 +131,8 @@
   "kernel":
     modular: false
     check: BinaryStrings
-    nvr_pkg: kernel-core-5.14.0-70.13.1.el9_0
-    file: /lib/modules/5.14.0-70.13.1.el9_0.x86_64/vmlinuz
+    nvr_pkg: kernel-core-5.14.0-162.6.1.el9_1.0.1
+    file: /lib/modules/5.14.0-162.6.1.el9_1.0.1.x86_64/vmlinuz
     content: Rocky Linux Secure Boot Root CA
     value: true
     pkg_arch:
@@ -140,8 +140,8 @@
   "kernel-rt":
     modular: false
     check: BinaryStrings
-    nvr_pkg: kernel-rt-core-5.14.0-70.13.1.rt21.83.el9_0
-    file: /lib/modules/5.14.0-70.13.1.rt21.83.el9_0.x86_64/vmlinuz
+    nvr_pkg: kernel-rt-core-5.14.0-162.6.1.rt21.168.el9_1
+    file: /lib/modules/5.14.0-162.6.1.rt21.168.el9_1.x86_64/vmlinuz
     content: Rocky Linux Secure Boot Root CA
     value: true
     pkg_arch:
@@ -149,7 +149,7 @@
   "libdnf":
     modular: false
     check: BinaryStrings
-    nvr_pkg: libdnf-0.65.0-5.el9_0
+    nvr_pkg: libdnf-0.67.0-3.el9
     file: /usr/lib64/libdnf.so.2
     content: https://bugs.rockylinux.org/
     value: true
@@ -158,7 +158,7 @@
   "libreoffice":
     modular: true
     check: FileContents
-    nvr_pkg: libreoffice-7.1.8.1-6.el9
+    nvr_pkg: libreoffice-7.1.8.1-7.el9
     file: libreoffice.spec
     content: Rocky Enterprise Software Foundation
     value: true
@@ -176,7 +176,7 @@
   "nginx":
     modular: true
     check: FileContents
-    package: nginx-1.20.1-10.el9
+    package: nginx-1.20.1-13.el9
     file: /usr/share/nginx/html/404.html
     content: <a href="https://www.rockylinux.org/">
     value: true
@@ -185,7 +185,7 @@
   "openscap":   # temporary, submitting upstream PR
     modular: false
     check: FileContents
-    nvr_pkg: openscap-1.3.6-3.el9.rocky.0.1
+    nvr_pkg: openscap-1.3.6-4.el9.rocky.0.2
     file: /usr/share/openscap/cpe/openscap-cpe-oval.xml
     content: <platform>Rocky Linux 8</platform>
     value: true
@@ -203,7 +203,7 @@
   "pesign":
     modular: false
     check: FileContents
-    nvr_pkg: pesign-113-21.el9
+    nvr_pkg: pesign-115-4.el9.rocky.2
     file: /usr/lib/rpm/macros.d/macros.pesign
     content: Rocky Linux Secure Boot Signing Local Test Cert - Rocky Enterprise Software Foundation
     value: true
@@ -221,7 +221,7 @@
   "redhat-rpm-config":
     modular: false
     check: FileContents
-    nvr_pkg: redhat-rpm-config-194-1.el9
+    nvr_pkg: redhat-rpm-config-196-1.el9
     file: /usr/lib/rpm/redhat/dist.sh
     content: Rocky
     value: true
@@ -230,7 +230,7 @@
   "scap-security-guide":
     modular: false
     check: FileContents
-    nvr_pkg: scap-security-guide-0.1.60-6.el9_0.rocky.0.2
+    nvr_pkg: scap-security-guide-0.1.63-5.el9.rocky.1.5
     file: scap-security-guide.spec
     content: DSSG_PRODUCT_ROCKY9
     value: true
@@ -239,7 +239,7 @@
   "shim":
     modular: false
     check: FileContents
-    nvr_pkg: shim-15.4-2.el9.rocky.1
+    nvr_pkg: shim-15.6-1.el9.rocky.0.1
     file: shim.spec
     content: rocky-root-ca.der
     value: true
@@ -248,7 +248,7 @@
   "shim-unsigned-x64":
     modular: false
     check: FileContents
-    nvr_pkg: shim-unsigned-x64-15.5-1.el9.rocky.2
+    nvr_pkg: shim-unsigned-x64-15.6-1.el9.rocky.1
     file: shim-unsigned-x64.spec
     content: rocky-root-ca.der
     value: true
@@ -275,7 +275,7 @@
   "subscription-manager":
     modular: false
     check: FileContents
-    nvr_pkg: subscription-manager-1.29.26-3.el9_0
+    nvr_pkg: subscription-manager-1.29.30-1.el9
     file: /etc/dnf/plugins/subscription-manager.conf
     content: "enabled=0"
     value: true
@@ -284,16 +284,16 @@
   "subscription-manager-cockpit":
     modular: false
     check: FileContents
-    nvr_pkg: subscription-manager-cockpit-1.29.26-3.el9_0
     file: /etc/dnf/plugins/subscription-manager.conf
     content: "enabled=0"
+    nvr_pkg: subscription-manager-cockpit-4-1.el9.rocky.0.1
     value: true
     pkg_arch:
     source:
   "systemd":
     modular: false
     check: FileContents
-    nvr_pkg: systemd-250-6.el9_0
+    nvr_pkg: systemd-250-12.el9_1
     file: systemd.spec
     content: 0028-journal-change-support-URL-shown-in-the-catalog-entr.patch
     value: false
@@ -302,7 +302,7 @@
   "thunderbird":
     modular: true
     check: FileContents
-    nvr_pkg: thunderbird-91.8.0-1.el9_0
+    nvr_pkg: thunderbird-102.4.0-1.el9_0.0.1
     file: /usr/lib64/thunderbird/defaults/pref/all-redhat.js
     content: Rocky
     value: true
@@ -311,7 +311,7 @@
   "WALinuxAgent":
     modular: false
     check: FileContents
-    nvr_pkg: WALinuxAgent-2.3.0.2-3.el9.rocky.0
+    nvr_pkg: WALinuxAgent-2.7.0.6-6.el9.rocky.0
     file: /usr/lib/python3.9/site-packages/azurelinuxagent/common/osutil/factory.py
     content: rocky
     value: true
