--- a/qa-testcase-boxes/testcase-debranding-validation/r9.yaml
+++ b/qa-testcase-boxes/testcase-debranding-validation/r9.yaml
@@ -155,6 +155,15 @@
     value: true
     pkg_arch: src
     source:
+  "lorax-templates-rhel":
+    modular: false
+    check: FileContents
+    nvr_pkg: lorax-templates-rhel-9.0-35.el9.rocky.0.1
+    file: lorax-templates-rhel.spec
+    content: Remove libreport package that rocky does not ship
+    value: true
+    pkg_arch: src
+    source:
   "libreport":
     modular: false
     check: FileContents
