--- a/qa-testcase-boxes/testcase-debranding-validation/r9.yaml
+++ b/qa-testcase-boxes/testcase-debranding-validation/r9.yaml
@@ -191,6 +191,24 @@
     value: true
     pkg_arch:
     source:
+  "osbuild":
+    modular: false
+    check: FileExists
+    nvr_pkg: osbuild-65-1.el9.rocky.0.1
+    file: /usr/lib/osbuild/runners/org.osbuild.rocky91
+    content: na
+    value: true
+    pkg_arch: noarch
+    source:
+  "osbuild-composer":
+    modular: false
+    check: FileExists
+    nvr_pkg: osbuild-composer-core-62.1-3.el9_1.rocky.0.1
+    file: /usr/share/osbuild-composer/repositories/rocky-91.json
+    content: na
+    value: true
+    pkg_arch:
+    source:
   "PackageKit":
     modular: false
     check: FileContents
