don't add/show some files in git status

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 .DS_Store
-*.rpm
+.RPM_CACHE_DIR
+CHECKSUM*
+RPM-GPG-KEY*
+*.cache
+*.diff
 *.iso
+*.log
+*.out
+*.rpm
+*.save
 .vagrant
 vagrant-settings.yaml
 patch.yml
+*/*/pdot
+*/*/pdot-dev
+*/*/isos
