--- a/qa-testcase-boxes/testcase-debranding-validation/r9.yaml
+++ b/qa-testcase-boxes/testcase-debranding-validation/r9.yaml
@@ -1,20 +1,9 @@
 ---
-"r9":   # This file is incomplete as we wait for all packages to be built in Peridot
-  "gnome-session":
-    modular: false
-    check: FileContents
-    nvr_pkg: gnome-session-40.1.1-6.el9.rocky.1
-    file: gnome-session.spec
-    content: subscription-manager-support.patch
-    value: false
-    pkg_arch: src
-    source: peridot
----
 "all":
   "anaconda":
     modular: false
     check: FileContents
-    nvr_pkg: anaconda-core-34.25.1.14-1.el9.rocky.0.3
+    nvr_pkg: anaconda-core-34.25.2.10-1.el9_2.rocky.0.3
     file: /usr/lib64/python3.9/site-packages/pyanaconda/core/constants.py
     content: Rocky Linux
     value: true
@@ -23,16 +12,16 @@
   "anaconda-user-help":
     modular: false
     check: FileContents
-    nvr_pkg: anaconda-user-help-9.0.0-1.el9.rocky.0.2
+    nvr_pkg: anaconda-user-help-9.2.1-1.el9.rocky.0.2
     file: /usr/share/anaconda/help/rhel/en-US/anaconda-help.xml
     content: Welcome to Rocky Linux
     value: true
     pkg_arch: noarch
     source:
-  "cloud-init":   # temporary till 21.3
+  "cloud-init":
     modular: false
     check: FileContents
-    nvr_pkg: cloud-init-22.1-5.el9
+    nvr_pkg: cloud-init-22.1-9.el9.0.2
     file: /usr/lib/python3.9/site-packages/cloudinit/distros/__init__.py
     content: rocky
     value: true
@@ -41,7 +30,7 @@
   "crash":
     modular: false
     check: FileContents
-    nvr_pkg: crash-8.0.1-2.el9
+    nvr_pkg: crash-8.0.2-2.el9
     file: crash.spec
     content: Rocky Linux
     value: true
@@ -50,7 +39,7 @@
   "dhcp":
     modular: false
     check: FileContents
-    nvr_pkg: dhcp-4.4.2-17.b1.el9
+    nvr_pkg: dhcp-4.4.2-18.b1.el9
     file: 0001-change-bug-url.patch
     content: https://bugs.rockylinux.org/
     value: true
@@ -59,16 +48,16 @@
   "dnf":
     modular: false
     check: FileContents
-    nvr_pkg: python3-dnf-4.12.0-4.el9
+    nvr_pkg: python3-dnf-4.14.0-5.el9_2
     file: /usr/lib/python3.9/site-packages/dnf/const.py
-    content: "BUGTRACKER='https://bugs.rockylinux.org/'"
+    content: BUGTRACKER='https://bugs.rockylinux.org/'
     value: true
     pkg_arch: noarch
     source:
   "firefox":
     modular: false
     check: FileContents
-    nvr_pkg: firefox-102.4.0-1.el9_0.0.1
+    nvr_pkg: firefox-102.10.0-1.el9_1
     file: /usr/lib64/firefox/defaults/preferences/all-redhat.js
     content: https://rockylinux.org
     value: true
@@ -77,7 +66,7 @@
   "fwupd":
     modular: false
     check: BinaryStrings
-    nvr_pkg: fwupd-1.7.9-1.el9
+    nvr_pkg: fwupd-1.8.10-2.el9
     file: /usr/libexec/fwupd/efi/fwupdx64.efi.signed
     content: Rocky Linux Secure Boot Root CA
     value: true
@@ -86,25 +75,34 @@
   "gcc":
     modular: false
     check: FileContents
-    nvr_pkg: gcc-11.3.1-2.1.el9
+    nvr_pkg: gcc-11.3.1-4.3.el9
     file: /usr/share/man/man1/gcc.1.gz
     content: https://bugs.rockylinux.org/
     value: true
     pkg_arch:
     source:
+  "gnome-session":
+    modular: false
+    check: FileContents
+    nvr_pkg: gnome-session-40.1.1-7.el9.rocky.1
+    file: gnome-session.spec
+    content: subscription-manager-support.patch
+    value: false
+    pkg_arch: src
+    source: peridot
   "gnome-settings-daemon":
     modular: false
     check: FileContents
-    nvr_pkg: gnome-settings-daemon-40.0.1-8.el9
+    nvr_pkg: gnome-settings-daemon-40.0.1-11.el9_2
     file: gnome-settings-daemon.spec
-    content: "%if %{undefined rocky}"
+    content: "%if %{undefined rocky}
     value: true
     pkg_arch: src
     source:
   "grub2":
     modular: false
     check: BinaryStrings
-    nvr_pkg: grub2-efi-x64-2.06-46.el9.rocky.0.1
+    nvr_pkg: grub2-efi-x64-2.06-61.el9.rocky.0.1
     file: /boot/efi/EFI/rocky/grubx64.efi
     content: Rocky Linux Secure Boot Root CA
     value: true
@@ -122,8 +120,8 @@
   "kernel":
     modular: false
     check: BinaryStrings
-    nvr_pkg: kernel-core-5.14.0-162.6.1.el9_1.0.1
-    file: /lib/modules/5.14.0-162.6.1.el9_1.0.1.x86_64/vmlinuz
+    nvr_pkg: kernel-core-5.14.0-284.11.1.el9_2
+    file: /lib/modules/5.14.0-284.11.1.el9_2.x86_64/vmlinuz
     content: Rocky Linux Secure Boot Root CA
     value: true
     pkg_arch:
@@ -131,8 +129,8 @@
   "kernel-rt":
     modular: false
     check: BinaryStrings
-    nvr_pkg: kernel-rt-core-5.14.0-162.6.1.rt21.168.el9_1
-    file: /lib/modules/5.14.0-162.6.1.rt21.168.el9_1.x86_64/vmlinuz
+    nvr_pkg: kernel-rt-core-5.14.0-284.11.1.rt14.296.el9_2
+    file: /lib/modules/5.14.0-284.11.1.rt14.296.el9_2.x86_64/vmlinuz
     content: Rocky Linux Secure Boot Root CA
     value: true
     pkg_arch:
@@ -140,7 +138,7 @@
   "libdnf":
     modular: false
     check: BinaryStrings
-    nvr_pkg: libdnf-0.67.0-3.el9
+    nvr_pkg: libdnf-0.69.0-3.el9_2
     file: /usr/lib64/libdnf.so.2
     content: https://bugs.rockylinux.org/
     value: true
@@ -149,18 +147,9 @@
   "libreoffice":
     modular: true
     check: FileContents
-    nvr_pkg: libreoffice-7.1.8.1-7.el9
+    nvr_pkg: libreoffice-7.1.8.1-8.el9_1
     file: libreoffice.spec
     content: Rocky Enterprise Software Foundation
-    value: true
-    pkg_arch: src
-    source:
-  "lorax-templates-rhel":
-    modular: false
-    check: FileContents
-    nvr_pkg: lorax-templates-rhel-9.0-35.el9.rocky.0.1
-    file: lorax-templates-rhel.spec
-    content: Remove libreport package that rocky does not ship
     value: true
     pkg_arch: src
     source:
@@ -173,29 +162,38 @@
     value: true
     pkg_arch:
     source:
+  "lorax-templates-rhel":
+    modular: false
+    check: FileContents
+    nvr_pkg: lorax-templates-rhel-9.0-37.el9.rocky.0.1
+    file: lorax-templates-rhel.spec
+    content: Remove libreport package that rocky does not ship
+    value: true
+    pkg_arch: src
+    source:
   "nginx":
     modular: true
     check: FileContents
-    package: nginx-1.20.1-13.el9
+    nvr_pkg: nginx-1.20.1-14.el9
     file: /usr/share/nginx/html/404.html
     content: <a href="https://www.rockylinux.org/">
     value: true
     pkg_arch:
     source:
-  "openscap":   # temporary, submitting upstream PR
+  "openscap":
     modular: false
     check: FileContents
-    nvr_pkg: openscap-1.3.6-4.el9.rocky.0.2
+    nvr_pkg: openscap-1.3.7-1.el9.rocky.1.0
     file: /usr/share/openscap/cpe/openscap-cpe-oval.xml
-    content: <platform>Rocky Linux 9</platform>
+    content: "<platform>Rocky Linux 9</platform>
     value: true
     pkg_arch:
     source:
   "osbuild":
     modular: false
     check: FileExists
-    nvr_pkg: osbuild-65-1.el9.rocky.0.1
-    file: /usr/lib/osbuild/runners/org.osbuild.rocky91
+    nvr_pkg: osbuild-81-1.el9_2.1.rocky.0.2
+    file: /usr/lib/osbuild/runners/org.osbuild.rocky9
     content: na
     value: true
     pkg_arch: noarch
@@ -203,11 +201,11 @@
   "osbuild-composer":
     modular: false
     check: FileExists
-    nvr_pkg: osbuild-composer-core-62.1-3.el9_1.rocky.0.1
-    file: /usr/share/osbuild-composer/repositories/rocky-91.json
-    content: na
+    nvr_pkg: osbuild-composer-76-2.el9_2.2.rocky.0.2
+    file: osbuild-composer.spec
+    content: repositories/rocky
     value: true
-    pkg_arch:
+    pkg_arch: src
     source:
   "PackageKit":
     modular: false
@@ -221,7 +219,7 @@
   "pesign":
     modular: false
     check: FileContents
-    nvr_pkg: pesign-115-4.el9.rocky.2
+    nvr_pkg: pesign-115-6.el9_1.rocky.2
     file: /usr/lib/rpm/macros.d/macros.pesign
     content: Rocky Linux Secure Boot Signing Local Test Cert - Rocky Enterprise Software Foundation
     value: true
@@ -239,7 +237,7 @@
   "redhat-rpm-config":
     modular: false
     check: FileContents
-    nvr_pkg: redhat-rpm-config-196-1.el9
+    nvr_pkg: redhat-rpm-config-199-1.el9
     file: /usr/lib/rpm/redhat/dist.sh
     content: Rocky
     value: true
@@ -248,7 +246,7 @@
   "scap-security-guide":
     modular: false
     check: FileContents
-    nvr_pkg: scap-security-guide-0.1.63-5.el9.rocky.1.5
+    nvr_pkg: scap-security-guide-0.1.66-1.el9_1.rocky.0.1
     file: scap-security-guide.spec
     content: DSSG_ROCKY_LINUX_DERIVATIVES_ENABLED
     value: true
@@ -257,17 +255,8 @@
   "shim":
     modular: false
     check: FileContents
-    nvr_pkg: shim-15.6-1.el9.rocky.0.1
+    nvr_pkg: shim-15.6-1.el9.rocky.0.2
     file: shim.spec
-    content: rocky-root-ca.der
-    value: true
-    pkg_arch: src
-    source:
-  "shim-unsigned-x64":
-    modular: false
-    check: FileContents
-    nvr_pkg: shim-unsigned-x64-15.6-1.el9.rocky.1
-    file: shim-unsigned-x64.spec
     content: rocky-root-ca.der
     value: true
     pkg_arch: src
@@ -281,19 +270,28 @@
     value: true
     pkg_arch: src
     source:
+  "shim-unsigned-x64":
+    modular: false
+    check: FileContents
+    nvr_pkg: shim-unsigned-x64-15.6-1.el9.rocky.1
+    file: shim-unsigned-x64.spec
+    content: rocky-root-ca.der
+    value: true
+    pkg_arch: src
+    source:
   "subscription-manager":
     modular: false
     check: FileContents
-    nvr_pkg: subscription-manager-1.29.30-1.el9
+    nvr_pkg: subscription-manager-1.29.33.1-1.el9_2
     file: /etc/dnf/plugins/subscription-manager.conf
-    content: "enabled=0"
+    content: enabled=0
     value: true
     pkg_arch:
     source:
   "subscription-manager-cockpit":
     modular: false
     check: FileContents
-    nvr_pkg: subscription-manager-cockpit-4-1.el9.rocky.0.1
+    nvr_pkg: subscription-manager-cockpit-6-1.el9.rocky.0.1
     file: subscription-manager-cockpit.spec
     content: Remove Red Hat specific references
     value: true
@@ -302,16 +300,16 @@
   "systemd":
     modular: false
     check: FileContents
-    nvr_pkg: systemd-250-12.el9_1
+    nvr_pkg: systemd-252-13.el9_2
     file: systemd.spec
-    content: 0028-journal-change-support-URL-shown-in-the-catalog-entr.patch
+    content: '0028-journal-change-support-URL-shown-in-the-catalog-entr.patch'
     value: false
     pkg_arch: src
     source:
   "thunderbird":
     modular: true
     check: FileContents
-    nvr_pkg: thunderbird-102.4.0-1.el9_0.0.1
+    nvr_pkg: thunderbird-102.10.0-2.el9_1
     file: /usr/lib64/thunderbird/defaults/pref/all-redhat.js
     content: Rocky
     value: true
@@ -320,7 +318,7 @@
   "WALinuxAgent":
     modular: false
     check: FileContents
-    nvr_pkg: WALinuxAgent-2.7.0.6-6.el9.rocky.0
+    nvr_pkg: WALinuxAgent-2.7.0.6-9.el9.rocky.0
     file: /usr/lib/python3.9/site-packages/azurelinuxagent/common/osutil/factory.py
     content: rocky
     value: true
